--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1733,12 +1733,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "05b8a217",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"next_word_lstm.h5\")\n",
+    "model.save(\"next_word_lstm.keras\")\n",
     "## Save the tokenizer\n",
     "import pickle\n",
     "with open('tokenizer.pickle','wb') as handle:\n",
