fixed few more errors

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1422,105 +1422,105 @@
       "\n",
       "WARNING:tensorflow:From d:\\DL Krish Naik\\LSTM_GRU_Project\\tfenv\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "644/644 [==============================] - 16s 18ms/step - loss: 7.0511 - accuracy: 0.0301 - val_loss: 6.9473 - val_accuracy: 0.0346\n",
+      "644/644 [==============================] - 16s 20ms/step - loss: 7.0582 - accuracy: 0.0291 - val_loss: 6.8546 - val_accuracy: 0.0359\n",
       "Epoch 2/50\n",
-      "644/644 [==============================] - 11s 18ms/step - loss: 6.6627 - accuracy: 0.0317 - val_loss: 6.9681 - val_accuracy: 0.0346\n",
+      "644/644 [==============================] - 13s 20ms/step - loss: 6.5347 - accuracy: 0.0354 - val_loss: 6.8461 - val_accuracy: 0.0527\n",
       "Epoch 3/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 6.4797 - accuracy: 0.0366 - val_loss: 6.9573 - val_accuracy: 0.0486\n",
+      "644/644 [==============================] - 13s 19ms/step - loss: 6.3162 - accuracy: 0.0496 - val_loss: 6.8474 - val_accuracy: 0.0561\n",
       "Epoch 4/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 6.2701 - accuracy: 0.0518 - val_loss: 6.9085 - val_accuracy: 0.0560\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 6.1277 - accuracy: 0.0583 - val_loss: 6.8687 - val_accuracy: 0.0624\n",
       "Epoch 5/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 6.0226 - accuracy: 0.0692 - val_loss: 6.8156 - val_accuracy: 0.0641\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 5.9151 - accuracy: 0.0747 - val_loss: 6.7816 - val_accuracy: 0.0713\n",
       "Epoch 6/50\n",
-      "644/644 [==============================] - 11s 17ms/step - loss: 5.7749 - accuracy: 0.0794 - val_loss: 6.9039 - val_accuracy: 0.0717\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 5.6852 - accuracy: 0.0844 - val_loss: 6.9308 - val_accuracy: 0.0744\n",
       "Epoch 7/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 5.5384 - accuracy: 0.0889 - val_loss: 6.9588 - val_accuracy: 0.0756\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 5.4516 - accuracy: 0.0926 - val_loss: 6.9882 - val_accuracy: 0.0736\n",
       "Epoch 8/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 5.3094 - accuracy: 0.0967 - val_loss: 7.0642 - val_accuracy: 0.0729\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 5.2155 - accuracy: 0.1064 - val_loss: 7.0346 - val_accuracy: 0.0773\n",
       "Epoch 9/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 5.0886 - accuracy: 0.1057 - val_loss: 7.1243 - val_accuracy: 0.0744\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 4.9921 - accuracy: 0.1173 - val_loss: 7.1129 - val_accuracy: 0.0756\n",
       "Epoch 10/50\n",
-      "644/644 [==============================] - 12s 18ms/step - loss: 4.8646 - accuracy: 0.1179 - val_loss: 7.2641 - val_accuracy: 0.0754\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 4.7731 - accuracy: 0.1316 - val_loss: 7.2361 - val_accuracy: 0.0748\n",
       "Epoch 11/50\n",
-      "644/644 [==============================] - 11s 18ms/step - loss: 4.6477 - accuracy: 0.1339 - val_loss: 7.3620 - val_accuracy: 0.0723\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 4.5580 - accuracy: 0.1502 - val_loss: 7.3161 - val_accuracy: 0.0769\n",
       "Epoch 12/50\n",
-      "644/644 [==============================] - 11s 17ms/step - loss: 4.4383 - accuracy: 0.1564 - val_loss: 7.4409 - val_accuracy: 0.0676\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 4.3617 - accuracy: 0.1711 - val_loss: 7.4028 - val_accuracy: 0.0744\n",
       "Epoch 13/50\n",
-      "644/644 [==============================] - 12s 18ms/step - loss: 4.2391 - accuracy: 0.1795 - val_loss: 7.5794 - val_accuracy: 0.0694\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 4.1698 - accuracy: 0.1951 - val_loss: 7.5190 - val_accuracy: 0.0688\n",
       "Epoch 14/50\n",
-      "644/644 [==============================] - 12s 18ms/step - loss: 4.0501 - accuracy: 0.2092 - val_loss: 7.6552 - val_accuracy: 0.0725\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 3.9883 - accuracy: 0.2186 - val_loss: 7.6365 - val_accuracy: 0.0736\n",
       "Epoch 15/50\n",
-      "644/644 [==============================] - 11s 18ms/step - loss: 3.8768 - accuracy: 0.2335 - val_loss: 7.7753 - val_accuracy: 0.0682\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 3.8140 - accuracy: 0.2511 - val_loss: 7.7395 - val_accuracy: 0.0701\n",
       "Epoch 16/50\n",
-      "644/644 [==============================] - 12s 18ms/step - loss: 3.7151 - accuracy: 0.2614 - val_loss: 7.8589 - val_accuracy: 0.0653\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 3.6564 - accuracy: 0.2751 - val_loss: 7.8406 - val_accuracy: 0.0672\n",
       "Epoch 17/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 3.5639 - accuracy: 0.2875 - val_loss: 7.9804 - val_accuracy: 0.0639\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 3.5071 - accuracy: 0.2998 - val_loss: 7.9234 - val_accuracy: 0.0674\n",
       "Epoch 18/50\n",
-      "644/644 [==============================] - 13s 21ms/step - loss: 3.4162 - accuracy: 0.3098 - val_loss: 8.0701 - val_accuracy: 0.0639\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 3.3643 - accuracy: 0.3220 - val_loss: 8.0160 - val_accuracy: 0.0645\n",
       "Epoch 19/50\n",
-      "644/644 [==============================] - 12s 19ms/step - loss: 3.2798 - accuracy: 0.3332 - val_loss: 8.1412 - val_accuracy: 0.0618\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 3.2303 - accuracy: 0.3443 - val_loss: 8.1146 - val_accuracy: 0.0653\n",
       "Epoch 20/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 3.1610 - accuracy: 0.3551 - val_loss: 8.2121 - val_accuracy: 0.0637\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 3.1091 - accuracy: 0.3631 - val_loss: 8.1983 - val_accuracy: 0.0684\n",
       "Epoch 21/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 3.0462 - accuracy: 0.3742 - val_loss: 8.3009 - val_accuracy: 0.0620\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 2.9997 - accuracy: 0.3794 - val_loss: 8.2953 - val_accuracy: 0.0631\n",
       "Epoch 22/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.9356 - accuracy: 0.3918 - val_loss: 8.3749 - val_accuracy: 0.0651\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.8884 - accuracy: 0.3999 - val_loss: 8.3357 - val_accuracy: 0.0645\n",
       "Epoch 23/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.8385 - accuracy: 0.4074 - val_loss: 8.4622 - val_accuracy: 0.0598\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.7885 - accuracy: 0.4208 - val_loss: 8.4344 - val_accuracy: 0.0661\n",
       "Epoch 24/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.7419 - accuracy: 0.4234 - val_loss: 8.5287 - val_accuracy: 0.0629\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.6901 - accuracy: 0.4360 - val_loss: 8.5119 - val_accuracy: 0.0659\n",
       "Epoch 25/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.6549 - accuracy: 0.4414 - val_loss: 8.6044 - val_accuracy: 0.0633\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 2.6057 - accuracy: 0.4521 - val_loss: 8.5861 - val_accuracy: 0.0641\n",
       "Epoch 26/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.5749 - accuracy: 0.4577 - val_loss: 8.6623 - val_accuracy: 0.0645\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.5310 - accuracy: 0.4668 - val_loss: 8.6443 - val_accuracy: 0.0635\n",
       "Epoch 27/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.4896 - accuracy: 0.4750 - val_loss: 8.7556 - val_accuracy: 0.0579\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 2.4493 - accuracy: 0.4826 - val_loss: 8.7250 - val_accuracy: 0.0602\n",
       "Epoch 28/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.4230 - accuracy: 0.4857 - val_loss: 8.7856 - val_accuracy: 0.0583\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.3788 - accuracy: 0.4971 - val_loss: 8.8155 - val_accuracy: 0.0649\n",
       "Epoch 29/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.3539 - accuracy: 0.4971 - val_loss: 8.8494 - val_accuracy: 0.0585\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 2.3064 - accuracy: 0.5117 - val_loss: 8.8569 - val_accuracy: 0.0602\n",
       "Epoch 30/50\n",
-      "644/644 [==============================] - 10s 15ms/step - loss: 2.2903 - accuracy: 0.5117 - val_loss: 8.9314 - val_accuracy: 0.0600\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.2414 - accuracy: 0.5198 - val_loss: 8.9454 - val_accuracy: 0.0585\n",
       "Epoch 31/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.2216 - accuracy: 0.5240 - val_loss: 9.0044 - val_accuracy: 0.0585\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.1773 - accuracy: 0.5347 - val_loss: 8.9887 - val_accuracy: 0.0591\n",
       "Epoch 32/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.1634 - accuracy: 0.5360 - val_loss: 9.0655 - val_accuracy: 0.0596\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.1229 - accuracy: 0.5422 - val_loss: 9.0566 - val_accuracy: 0.0626\n",
       "Epoch 33/50\n",
-      "644/644 [==============================] - 10s 15ms/step - loss: 2.1097 - accuracy: 0.5450 - val_loss: 9.1200 - val_accuracy: 0.0577\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.0701 - accuracy: 0.5539 - val_loss: 9.1289 - val_accuracy: 0.0635\n",
       "Epoch 34/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 2.0545 - accuracy: 0.5541 - val_loss: 9.1729 - val_accuracy: 0.0558\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 2.0125 - accuracy: 0.5658 - val_loss: 9.1983 - val_accuracy: 0.0589\n",
       "Epoch 35/50\n",
-      "644/644 [==============================] - 10s 15ms/step - loss: 2.0053 - accuracy: 0.5669 - val_loss: 9.2531 - val_accuracy: 0.0573\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 1.9682 - accuracy: 0.5749 - val_loss: 9.2614 - val_accuracy: 0.0612\n",
       "Epoch 36/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.9588 - accuracy: 0.5739 - val_loss: 9.3079 - val_accuracy: 0.0579\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 1.9132 - accuracy: 0.5864 - val_loss: 9.3234 - val_accuracy: 0.0608\n",
       "Epoch 37/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.9167 - accuracy: 0.5816 - val_loss: 9.3671 - val_accuracy: 0.0567\n",
+      "644/644 [==============================] - 11s 18ms/step - loss: 1.8723 - accuracy: 0.5953 - val_loss: 9.3654 - val_accuracy: 0.0610\n",
       "Epoch 38/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.8705 - accuracy: 0.5920 - val_loss: 9.4117 - val_accuracy: 0.0608\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 1.8319 - accuracy: 0.6005 - val_loss: 9.4317 - val_accuracy: 0.0593\n",
       "Epoch 39/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.8353 - accuracy: 0.5976 - val_loss: 9.4774 - val_accuracy: 0.0544\n",
+      "644/644 [==============================] - 13s 20ms/step - loss: 1.7839 - accuracy: 0.6094 - val_loss: 9.5007 - val_accuracy: 0.0573\n",
       "Epoch 40/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.7888 - accuracy: 0.6062 - val_loss: 9.5387 - val_accuracy: 0.0552\n",
+      "644/644 [==============================] - 13s 19ms/step - loss: 1.7497 - accuracy: 0.6171 - val_loss: 9.5585 - val_accuracy: 0.0577\n",
       "Epoch 41/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.7482 - accuracy: 0.6137 - val_loss: 9.6002 - val_accuracy: 0.0573\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 1.7114 - accuracy: 0.6282 - val_loss: 9.6219 - val_accuracy: 0.0577\n",
       "Epoch 42/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.7133 - accuracy: 0.6215 - val_loss: 9.6424 - val_accuracy: 0.0608\n",
+      "644/644 [==============================] - 12s 19ms/step - loss: 1.6774 - accuracy: 0.6338 - val_loss: 9.7073 - val_accuracy: 0.0561\n",
       "Epoch 43/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.6735 - accuracy: 0.6300 - val_loss: 9.7109 - val_accuracy: 0.0595\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 1.6427 - accuracy: 0.6394 - val_loss: 9.7328 - val_accuracy: 0.0577\n",
       "Epoch 44/50\n",
-      "644/644 [==============================] - 11s 17ms/step - loss: 1.6415 - accuracy: 0.6385 - val_loss: 9.7751 - val_accuracy: 0.0575\n",
+      "644/644 [==============================] - 11s 18ms/step - loss: 1.6072 - accuracy: 0.6460 - val_loss: 9.7768 - val_accuracy: 0.0546\n",
       "Epoch 45/50\n",
-      "644/644 [==============================] - 11s 17ms/step - loss: 1.6144 - accuracy: 0.6451 - val_loss: 9.8033 - val_accuracy: 0.0558\n",
+      "644/644 [==============================] - 11s 18ms/step - loss: 1.5856 - accuracy: 0.6492 - val_loss: 9.8159 - val_accuracy: 0.0575\n",
       "Epoch 46/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.5791 - accuracy: 0.6471 - val_loss: 9.8470 - val_accuracy: 0.0608\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 1.5492 - accuracy: 0.6589 - val_loss: 9.9004 - val_accuracy: 0.0595\n",
       "Epoch 47/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.5489 - accuracy: 0.6557 - val_loss: 9.9150 - val_accuracy: 0.0579\n",
+      "644/644 [==============================] - 11s 18ms/step - loss: 1.5275 - accuracy: 0.6608 - val_loss: 9.9734 - val_accuracy: 0.0556\n",
       "Epoch 48/50\n",
-      "644/644 [==============================] - 11s 18ms/step - loss: 1.5260 - accuracy: 0.6615 - val_loss: 9.9747 - val_accuracy: 0.0573\n",
+      "644/644 [==============================] - 11s 18ms/step - loss: 1.5058 - accuracy: 0.6679 - val_loss: 9.9997 - val_accuracy: 0.0571\n",
       "Epoch 49/50\n",
-      "644/644 [==============================] - 10s 15ms/step - loss: 1.4954 - accuracy: 0.6677 - val_loss: 10.0298 - val_accuracy: 0.0573\n",
+      "644/644 [==============================] - 12s 18ms/step - loss: 1.4758 - accuracy: 0.6695 - val_loss: 10.0657 - val_accuracy: 0.0550\n",
       "Epoch 50/50\n",
-      "644/644 [==============================] - 10s 16ms/step - loss: 1.4766 - accuracy: 0.6664 - val_loss: 10.0663 - val_accuracy: 0.0569\n"
+      "644/644 [==============================] - 12s 19ms/step - loss: 1.4524 - accuracy: 0.6769 - val_loss: 10.1170 - val_accuracy: 0.0542\n"
      ]
     }
    ],
@@ -1577,7 +1577,7 @@
      "output_type": "stream",
      "text": [
       "Input text:To be or not to be\n",
-      "Next Word PRediction:whom\n"
+      "Next Word Prediction:such\n"
      ]
     }
    ],
@@ -1586,7 +1586,7 @@
     "print(f\"Input text:{input_text}\")\n",
     "max_sequence_len=model.input_shape[1]+1\n",
     "next_word=predict_next_word(model,tokenizer,input_text,max_sequence_len)\n",
-    "print(f\"Next Word PRediction:{next_word}\")"
+    "print(f\"Next Word Prediction:{next_word}\")"
    ]
   },
   {
@@ -1594,9 +1594,19 @@
    "execution_count": 19,
    "id": "05b8a217",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\DL Krish Naik\\LSTM_GRU_Project\\tfenv\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
    "source": [
-    "model.save(\"next_word_lstm.keras\")\n",
+    "\n",
+    "model.save(\"next_word_lstm.h5\", save_format=\"h5\")\n",
     "## Save the tokenizer\n",
     "import pickle\n",
     "with open('tokenizer.pkl','wb') as handle:\n",
@@ -1614,7 +1624,7 @@
      "output_type": "stream",
      "text": [
       "Input text:  Barn. Last night of all,When yond same\n",
-      "Next Word PRediction:noble\n"
+      "Next Word PRediction:scull\n"
      ]
     }
    ],
